--- a/Assignment_MSB104_q.qmd
+++ b/Assignment_MSB104_q.qmd
@@ -81,6 +81,39 @@ We would like to have the information we get from these two data sets
 collected in one data set. A new data set called gdppop has been created
 and is the data set that will be used further in the task.
 
+#### 3.1 Download new data sets from Eurostat
+
+We will start the assignment 2 with getting three new data sets from
+Eurostat. The first data set is erducation, were we want to look at the
+amount of people who have higher education and in the second dataset we
+will look at transport. Find out how many motorways there is in
+kilometers, In the third, called demographic data set, we want to look
+at the life expectancy age.
+
+```{r Data set Education }
+#| echo: false
+Education <- read_csv('Dataset/education.csv',show_col_types = FALSE )
+Education <- Education %>%
+  select(unit,isced11,geo,age,TIME_PERIOD,OBS_VALUE) %>%
+  filter(unit=="PC" & isced11=="ED0-2" & age=="Y25-64" & (grepl('DK..', geo) | grepl('FR..', geo) | grepl('HU..', geo)| grepl('PT..', geo) | grepl('SK..', geo))) %>%
+  mutate(Edu = OBS_VALUE, Year=TIME_PERIOD, nuts2=geo) %>%
+  select(nuts2, Year, Edu)
+```
+
+```{r Data set Motorways}
+#| echo: false
+Transport <- read_csv('Dataset/Transport.csv',show_col_types = FALSE )%>%
+  mutate(Road=OBS_VALUE, Year=TIME_PERIOD, nuts2=geo) %>%
+  select(nuts2, Year, Road)
+```
+
+```{r Data set life expectancy age }
+#| echo: false
+Lifeexp <- read_csv('Dataset/Life.csv' ,show_col_types = FALSE) %>%
+mutate(lea = OBS_VALUE, Year = TIME_PERIOD, nuts2=geo) %>%
+  select(nuts2, Year, lea)
+```
+
 ```{r Make one datset with GDP and Population}
 #| echo: false
 gdppop <- BNP %>%
@@ -119,7 +152,9 @@ all the nuts3 regions. The mean of GDP per capita for all nuts3 regions
 are 22 588 euro per capita. The smalest value are 4394,85 Euro per
 capita and the highest are 92 361,75 Euros per capita.
 
-It is not easy to draw any conclusion from the summary in table 1, as we
+**skrive om GDP og populasjon**
+
+It is not easy to draw any conclusion from the summary in @tbl-1, as we
 assume that there are large regional inequaties between the regions in
 the countries we have in our sample.
 
@@ -130,10 +165,10 @@ choose to look at them together. This will hopefully give us a better
 overview of outliers in the various countries. In order to be able to
 compare the countries in a given period, we choose to reduce the number
 of years to only look at the year 2010. When we look at specific years
-and countries, we can look at GDP per inhabitant in each individual
-country. It will give us an overview of the differences in the regions.
-If there are large deviations in any of the regions, we can possibly
-take them away so that the differences do not become too large.
+and countries, we can look at GDP per capita in each individual country.
+It will give us an overview of the differences in the regions. If there
+are large deviations in any of the regions, we can possibly take them
+away so that the differences do not become too large.
 
 #### 1.3.1 Denmark
 
@@ -155,49 +190,51 @@ Euro per capita.
 
 France is a country in southern Europe with over 100 nuts3 regions. Some
 of these regions are colonies in other parts of the world. It is not
-easy to distinguish the different regions. The @fig-2 shows us that it
-is the capital named Paris in France that stands out. Based on the
-summary in @tbl-4, we can see that there is a difference between min and
-max. If we look more closely at the figures, it is possible to see that
-the reason may be that France has colonies in other countries that are
+easy to distinguish the different regions. @fig-2 shows us that it is
+the capital, Paris in France that stands out. Based on the summary in
+@tbl-4 , we can see that there is a difference between min and max. If
+we look more closely at the figures, it is possible to see that the
+reason may be that France has colonies in other countries that are
 included. These colonies are located in Africa and South America which
 has a negative effect on France's overall GDP. For further research, we
-have chosen to remove these regions from the data set (@tbl-5, @fig-3).
+have chosen to remove these regions from the data set.
 
-After the FRY regions have been removed, we are left with 96 nuts3
-regions. Based on @tbl-6 the three richest regions in 2010 are Paris
-(FR101), Hauts-de-seine (FR105) and Rhône (FRK26). Paris og
-Hauts-de-seine stands out clearly from the other region with a
-difference of approximately 50,000 Euro pr capita. The three poorest
-regions in 2010 is Creuse (FRI22), Ariège (FRJ21) and
-Meuse(FRF32)@tbl-7. In these regions we find little variation in gdp per
-capita. Between the Paris and Meuse there is a difference of over 74,000
-Euro per capita. It looks like there is a greater between rich and poor
-in France than in Denmark. An assumption could be that since France has
-a lot more regions then Denmark some of the regions in France can be
-very small compare to the few regions in Denmark.
+After the FRY regions have been removedin @fig-3, we are left with 96
+nuts3 regions. fylle inn info om fig 3
+
+Based on @tbl-6 the three richest regions in 2010 are Paris (FR101),
+Hauts-de-seine (FR105) and Rhône (FRK26). Paris og Hauts-de-seine stands
+out clearly from the other region with a difference of approximately
+50,000 Euro pr capita. The three poorest regions in 2010 is Creuse
+(FRI22), Ariège (FRJ21) and Meuse(FRF32)@tbl-7. In these regions we find
+little variation in gdp per capita. Between the Paris and Meuse there is
+a difference of over 74,000 Euro per capita. It looks like there is a
+greater between rich and poor in France than in Denmark. An assumption
+could be that since France has a lot more regions then Denmark some of
+the regions in France can be very small compare to the few regions in
+Denmark.
 
 #### 1.3.3 Hungary and Slovakia
 
 Hungary and Slovakia are both countries in Central Europe. As we can se
 on @fig-4 both Bratislava and Budapest had a good growth until 2008.
-After that, things went down with Bratislava for a while. At the same
-time Budapest had a larger increase The other regions in these countries
-have had more stable growth.
+After the growth in 2008, we see that the curve goes down for a period
+with Bratislava. At the same time Budapest had a larger increase. The
+other regions in these countries have had more stable growth.
 
 Together, Hungary and Slovakia has 28 regions. In @tbl-8 The three
 richest regions in 2010 are Bratislava (SK010), Budapest (HU110) and
 Trnava (SK021). This refers to what we have commented on previously
 countries that the capital cities are often the richest regions when we
-look at gdp per capita.. In @tbl-9 it shows that the poorest regions in
-2010 are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). All the poorest
-regions belongs to Hungary, which may mean that Hungary has a lower GDP
-per capita than Slovakia. .
+look at gdp per capita. In @tbl-9 it shows that the poorest regions in
+year 2010 are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). All the
+poorest regions belongs to Hungary, which may mean that Hungary has a
+lower GDP per capita than Slovakia.
 
 There is a difference of approximately 25,000 Euro per capita between
-the richest and poorest regions in Hungary IN 2010. Based on these
+the richest and poorest regions in Hungary in 2010. Based on these
 observations, the capital Bratislava is the richest region. Since we do
-not see any of Slovakia's regions among the lowest, we can assume that
+not see any of Slovakia's regions among the lowest, we can assume
 Slovakia has a higher GDP per capita than Hungary has for its
 inhabitants.
 
@@ -206,7 +243,7 @@ inhabitants.
 Portugal is a country in southern Europe. Portugal has two archipelagos,
 each representing a different region. In @fig-5 we can see that there is
 a steady growth in the regions, but all regions have had a slight
-decline between 2010-2012. After 2012, it appears that all regions will
+decline between 2010-2012. After 2012, it appears that all regions have
 increase again.
 
 Portugal has 25 regions. @tbl-10 shows us that the three richest regions
@@ -219,10 +256,15 @@ difference between the richest and the poorest regions in Portugal.
 
 In all the countries, we see that it is the capitals that stand out the
 most and have the highest GDP per capita among their inhabitants. Paris
-has managed to have the highest GDP per capita and the poorest regions
-can be found in Hungary.
+has the highest GDP per capita and the poorest regions are to be found
+in Hungary.
 
-### 2. Regional inequity
+### 2. Regional inequality
+
+Regional inequality can be measured using Gini coefficients. We create
+the Gini coefficient by using this formula
+
+$$ GINW_j=\frac{1}{2 \bar{y_j}} \sum_{i}^{n_j}\sum_{l}^{n_j}\frac{p_i}{P_j} \frac{p_l}{P_j} |y_i-y_l| $$
 
 A Gini coefficient must be between 0 and 1. If it's 0, it means that
 there is little inequality, and if it's closer to 1, it means that there
@@ -234,6 +276,16 @@ data we have to see if we find outliers. Outliers are values that are
 either very high or very low compared to the other data we have.
 
 #### 2.1 Gini for all countries
+
+gdppop %\>%
+
+#\| echo: false
+
+filter(Year == 2010) %\>%
+
+distinct(nuts2, Year,.keep_all = TRUE) %\>%
+
+select(gini_n2) %\>%
 
 ```{r Gini for all countries }
 #| echo: false
@@ -256,8 +308,9 @@ gdppop  %>%
   #| echo: false
   filter(Year == 2010) %>% 
    distinct(nuts2, Year,.keep_all = TRUE) %>%
-select(gini_n2) %>%
+select(gini_n2)%>%
 st()
+
 ```
 
 When we look at all the nuts2 regions in the selected countries, we have
@@ -277,10 +330,10 @@ graph than the other regions. Although it is not close to 0, there is a
 greater difference between rich and poor here than in the other regions.
 
 As we can see in @tbl-12 the Gini coefficients are between 0 and 0,11 in
-Denmark. @tbl-13 shows us that Denmark has a region called Nordjylland
-(DK05) which is an outlier . In this region we don't have much data so
-the little data we get gives us a perfect gini of 0. Denmark has only
-five NUTS2 regions, and it doesn't gives us much data to work with.
+Denmark. In @tbl-13 Denmark has a region, DK05 which is an outlier. In
+this region we don't have much data so the little data we get gives us a
+perfect gini of 0. Denmark has only five NUTS2 regions, and it doesn't
+gives us much data to work with.
 
 #### 2.1.2 France
 
@@ -306,15 +359,15 @@ Europe and we assume that this is the reason why there are large
 fluctuations.
 
 When we look at the @tbl-16 the Gini coefficient in Hungary is between 0
-and 0,08 . Based on @tbl-18 Hungary has two regions, Budapest (HU11) and
-Pest (HU12) which are outliers. Looking at the year 2010, Budapest and
-Pest do not have any data that we can look at.
+and 0,085 . Based on @tbl-18 Hungary has two regions, Budapest (HU11)
+and Pest (HU12) which are outliers. Looking at the year 2010, Budapest
+and Pest do not have any data that we can look at.
 
-@tbl-17 tells us that in Slovakia, the Gini coefficient are also between
-0 and 0,08 . Slovakia has one region called SK01 as we can see in
-@tbl-18, that is an outlier. Then we are left with three regions from
-which we can obtain data in Slovakia. The reason why we combined Hungary
-and Slovakia further up in the task was precisely that they also had few
+@tbl-17 tells us that in Slovakia, the Gini coefficient are between 0
+and 0,081. Slovakia has one region called SK01 as we can see in @tbl-18,
+that is an outlier. Then we are left with three regions from which we
+can obtain data in Slovakia. The reason why we combined Hungary and
+Slovakia further up in the task was precisely that they also had few
 regions at the nuts3 level, in the same way that they also have now have
 few nuts2 levels.
 
@@ -327,13 +380,13 @@ stands out somewhat in that there are strong fluctuations over the
 years.
 
 Based on @tbl-19 Portugal has their Gini coefficient between 0 and 0,08.
-Portugal has four regions, Algarve (PT15) Lisboa(PT17), Regiäo Autònoma
-dos Acores (PT20) and Regiäo Autònoma da Madeira (PT30). Regiäo Autònoma
-dos Acores and Regiäo Autònoma da Madeira are both archipelagos,
-belonging to Portugal which may be the reason why they are outliers as
-we can see in @tbl-20. Portugal doesn't have many NUTS 2 regions, and
-when four of them have no value, there is not much confidence in the
-result we get.
+Portugal has four regions that are outliers, Algarve (PT15)
+Lisboa(PT17), Regiäo Autònoma dos Acores (PT20) and Regiäo Autònoma da
+Madeira (PT30). Regiäo Autònoma dos Acores and Regiäo Autònoma da
+Madeira are both archipelagos, belonging to Portugal which may be the
+reason why they are outliers as we can see in @tbl-20. Portugal doesn't
+have many NUTS 2 regions, and when four of them have no data, there is
+not much confidence in the result we get.
 
 #### 2.2 Discuss briefly if there are noteworthy outliers
 
@@ -345,54 +398,21 @@ the other countries. Hungary had the lowest with only 8781.69. France
 has colonies in other continents, we chose to remove these regions, this
 so that GDP would not be affected by these regions that belong to others
 continents. When we took away the FRY regions, there was no outliers in
-France.
+France, but we do find in all the other countries.
 
-When we look at outliers for our countries, we cannot find any outliers
-in France, but we do find in all the other countries. All the regions
-that are outliners are regions that have only one province, in Hungary,
-Slovakia and Portugal (HU11, HU12, SK01, PT15 and PT 17) the outliers
-are linked to the capitals. Capitals are often large areas, which only
-have one region. Portugal also has two Island groups (PT20 and PT30)
-that come up as outliers, these are small regions. The last region that
-has outliers can be found in Denmark (DK05), this is a small region.
+All the regions that are outliners are regions that have only one
+province. In Hungary, Slovakia and Portugal (HU11, HU12, SK01, PT15 and
+PT 17) the outliers are linked to the capitals. Capitals are often large
+areas, which only have one region. Portugal also has two island groups
+(PT20 and PT30) that come up as outliers. The last region with outliers
+is found in Denmark (DK05), this is a small region. What we find
+noteworthy in outliers in our countries is that all the countries except
+from Denmark and France have capitals that are outliers.
 
 ### 3. Growth and inequity
 
-In this assignment, we will look at growth and inequity in the countries
-at Nuts2 level.
+we will now look at growth and inequality in the countries at Nuts2 level. We will also include more variables to see if there are other conditions that affect growth in GDP per capita.
 
-#### 3.1 Download new data sets from Eurostat
-
-We will start the assignment 2 with getting three new data sets from
-Eurostat. The first data set is erducation, were we want to look at the
-amount of people who have higher education and in the second dataset we
-will look at transport. Find out how many motorways there is in
-kilometers, In the third, called demographic data set, we want to look
-at the life expectancy age.
-
-```{r Data set Education }
-#| echo: false
-Education <- read_csv('Dataset/education.csv',show_col_types = FALSE )
-Education <- Education %>%
-  select(unit,isced11,geo,age,TIME_PERIOD,OBS_VALUE) %>%
-  filter(unit=="PC" & isced11=="ED0-2" & age=="Y25-64" & (grepl('DK..', geo) | grepl('FR..', geo) | grepl('HU..', geo)| grepl('PT..', geo) | grepl('SK..', geo))) %>%
-  mutate(Edu = OBS_VALUE, Year=TIME_PERIOD, nuts2=geo) %>%
-  select(nuts2, Year, Edu)
-```
-
-```{r Data set Motorways}
-#| echo: false
-Transport <- read_csv('Dataset/Transport.csv',show_col_types = FALSE )%>%
-  mutate(Road=OBS_VALUE, Year=TIME_PERIOD, nuts2=geo) %>%
-  select(nuts2, Year, Road)
-```
-
-```{r Data set life expectancy age }
-#| echo: false
-Lifeexp <- read_csv('Dataset/Life.csv' ,show_col_types = FALSE) %>%
-mutate(lea = OBS_VALUE, Year = TIME_PERIOD, nuts2=geo) %>%
-  select(nuts2, Year, lea)
-```
 
 ```{r GDP per capita for nuts 2}
 #| echo: false
@@ -431,15 +451,11 @@ inequality. When the Gini is 0, it is likely to believe there is missing
 som data for 2010. Further we will use filter to take away the Gini´s
 who are zero.
 
-#### 3.2 Gini per country
+#### 3.1 Gini per country
 
-In the @fig-10, we can see how the Gini is distributed per country.
-France has a point that stands out from the others, while the other
-countries have most of their points between 0 and 0.1. We have to be
-observant about that the countries Denmark, Hungary, Portugal and
-Slovakia don't have so many observations after we divided the countries
-into Nuts2 levels, that´s why we choose to only look at France by itself
-and all the countries together when we move forward in the assignment.
+In @fig-10 we can see how the Gini is distributed per country.
+France has one point that stands out from the others, while the other
+most countries have their scores between 0 and 0.1. After we divided the countries into Nuts2 regions, we see that the countries, apart from France, do not have that many observations. we therefore choose to only look at all the countries together or France in further tests
 
 ```{r}
 #| echo: false
@@ -477,7 +493,7 @@ lm_residuals_plot <- function(lmdata){
 }
 ```
 
-#### 3.3 Estimate the effect of regional development on regional inequality GINI for the year 2010
+#### 3.2 Estimate the effect of regional development on regional inequality GINI for the year 2010
 
 When we calculate regional development against regional inequality, we
 use the values we have found in Gini and GDP per capita. To estimate the
@@ -485,6 +501,7 @@ effect between a regional development and regional inequality we can use
 the formula:
 
 $$ Regional inequality_i = \beta_1 + \beta_2Regional development_i+u_i$$
+
 This equation tells us what the regional inequality will be when the
 regional development is = 0 The slope of the curve will show us how much
 inequality will change for each increase in development. If we increase
@@ -494,6 +511,11 @@ In the @fig-11 we look at the relationship between Gini and GDP per
 capita in 2010 for all countries. The graph shows that the points are
 above and below the regression line. **There are two points on the right
 that stand out significantly.**
+
+##### 3.2.1 Regresjon
+
+In this regresion we will look at the impact regional development (X) has on regional inequality (Y). This means how much an
+increase in X will have on a increase in Y. We use Gini as Y and GDP per capita as X.
 
 ```{r}
 #| echo: false
@@ -509,30 +531,22 @@ HungarySlovakia2010 <- gdppop2010 %>%
 Portugal2010 <- gdppop2010 %>%
   filter(nuts0=="PT")
 
-lm.1 = lm(Gini2 ~ gdp_per_capita, data = Denmark2010)
-lm.2 = lm(Gini2 ~ gdp_per_capita, data = France2010)
-lm.3 = lm(Gini2 ~ gdp_per_capita, data = HungarySlovakia2010)
-lm.4 = lm(Gini2 ~ gdp_per_capita, data = Portugal2010)
-lm.5 = lm(Gini2 ~ gdp_per_capita, data = gdppop2010)
+
+lm.1 = lm(Gini2 ~ gdp_per_capita, data = France2010)
+lm.2 = lm(Gini2 ~ gdp_per_capita, data = gdppop2010)
 
 #Gen Table
   huxreg(
-  list("Denmark" = lm.1, "France" = lm.2, "Hungary_Slovakia" = lm.3, "Portugal" = lm.4, "Total" = lm.5),
+  list( "France" = lm.1, "All" = lm.2),
   statistics = c(N = "nobs", R2 = "r.squared"),
   coefs = c(Const. = "(Intercept)", gdp_per_capita = "gdp_per_capita"),
   stars = c("*" = 0.1, "**" = 0.05, "***" =0.01),
   note = "Note): {stars} T statistics in brackets."
   )
 ```
+In this model, we see that France has 22 observations and an R2 of 81.4%, which means that a large part of the increase in GINI has a connection with an increase in GDP per capita. When we look at all the countries together, we see that we have 38 observations and that R2 is only 12.2%. which means that there is less correlation between an increase in Gini and an increase in Gdp per capita
 
-When we look at the table above we can see the impact regional
-development (X) has on regional inequality (Y). This means how much an
-increase in X will mean for an increase in Y. Portugal is the only
-country that has a negative impact. We will take a closer look at this
-country by country. Looking at this and earlier observations we choose
-to remove Paris from the France2010 dataset.
-
-#### 3.4 Discuss the goodness of fit of our estiamted model
+#### 3.3 Discuss the goodness of fit of our estiamted model
 
 When we look at the simple regression that we have made, it is R2 that
 can help us explain whether the variables have any relationship with
@@ -541,10 +555,8 @@ variable. The value in R2 can be between 0 and 1. When R2 is 1 it tells
 us that the independent variable has all the influence on the dependent
 variable. If it is 0, the independent variable has no influence on the
 dependent variable [@Forskningsmetode] **(Forskningsmetode - s.345).**
-Denmark and France have a high R2 value, Denmark with 0,813 and France
-with 0,814. Denmark only has 4 observations, which means that the result
-is not praticularly reliable. France, on the other hand, has 22
-observations, the more observations the better outcome of the result .
+
+The model above shows a negative Gini compared to when we look at all the countries together, and we therefore choose to remove Paris from the data set to see if this has any effect on the model.
 
 ```{r}
 #| echo: false
@@ -560,8 +572,10 @@ ggplot(France2010, aes(x = gdp_per_capita, y = Gini)) +
   geom_smooth(method = "lm") + 
   labs(title = "Gini and GDP per capita for France",x = "GDP per capita 2010", Y = "Gini")
 ```
+In this plot we can se a change
 
-#### 3.5 Plot the residuals against the predicted values of our model
+
+#### 3.4 Plot the residuals against the predicted values of our model
 
 By carrying out a regression analysis, we get a line that gives us an
 overview of where the best hits are made. Residuals show the distance to
@@ -1021,6 +1035,14 @@ plm(Gini3 ~ gdp_per_capita + I(gdp_per_capita^2), data = ., index = c("Year"), m
  
 penaldata %>%
 plm(Gini3 ~ gdp_per_capita + I(gdp_per_capita^2), data = ., index = c("nuts2", "Year"), model="within", effect ="twoways") %>% coeftest(vcov. = vcovHC, type = "HC1", save = TRUE)
+
+#Gen Table
+  huxreg(
+  list( "Nuts2" = plm, "year" = plm, "All" = plm ),
+  statistics = c(N = "nobs", R2 = "r.squared"),
+  stars = c("*" = 0.1, "**" = 0.05, "***" =0.01),
+  note = "Note): {stars} T statistics in brackets."
+  )
 ```
 
 ```{r}
@@ -1034,6 +1056,8 @@ plm(Gini3 ~ gdp_per_capita + I(gdp_per_capita^2), data = ., index = c("nuts0", "
 
 **Assignment 1**
 
+#### Table 1
+
 ```{r}
 #| echo: false
 #| output: true
@@ -1046,7 +1070,7 @@ gdppop %>%
   st()
 ```
 
-#### Graph 1
+#### Figure 1
 
 ```{r GDP in Denmark}
 #| echo: false
@@ -1061,6 +1085,8 @@ gdppop%>%
    labs(title = 'GDP per capita in Denmark', x = "Year", y = "GDP Per capita") 
 ```
 
+#### Table 2
+
 ```{r the whealtiest regions in Denmark}
 #| echo: false
 #| output: true
@@ -1073,6 +1099,8 @@ gdpdk <- gdppop%>%
 slice_max(gdpdk, gdp_per_capita, n=3)
 ```
 
+#### Table 3
+
 ```{r The poorest regions in Denmark}
 #| echo: false
 #| output: true
@@ -1082,7 +1110,7 @@ slice_min(gdpdk, gdp_per_capita, n=3)
 
 ```
 
-#### Graph 2
+#### Figure 2
 
 ```{r GDP in France}
 #| echo: false
@@ -1096,10 +1124,12 @@ gdppop%>%
    labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
 ```
 
+#### Table 4
+
 ```{r}
 #| echo: false
 #| output: true
-#| label: tbl_4
+#| label: tbl-4
 #| tbl-cap: "Mean FR"
 gdppop%>%
   filter(grepl("FR...", Region)) %>%
@@ -1107,10 +1137,12 @@ gdppop%>%
   summary()
 ```
 
+#### Table 5
+
 ```{r Take away the FRY regions}
 #| echo: false
 #| output: true
-#| label: tbl_5
+#| label: tbl-5
 #| tbl-cap: "Take away the FRY region"
 gdppop <- gdppop %>%
   filter(Region != 'FRY10') %>%
@@ -1118,6 +1150,8 @@ gdppop <- gdppop %>%
    filter(Region != 'FRY30') %>%
    filter(Region != 'FRY40') %>%
    filter(Region != 'FRY50') 
+
+#trenger ikke være en tabell for den tar bare bort FRY regionene skulle kanskje vert i teksten heller.
 ```
 
 #### Graph 3
@@ -1134,10 +1168,12 @@ gdppop%>%
    labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
 ```
 
+#### Table 6
+
 ```{r}
 #| echo: false
 #| output: true
-#| label: tbl_6
+#| label: tbl-6
 #| tbl-cap: "The wealthiest regions in France"
 gdpfr <- gdppop %>%
   filter(grepl("FR...", Region)) %>%
@@ -1146,10 +1182,12 @@ gdpfr <- gdppop %>%
 slice_max(gdpfr, gdp_per_capita, n=3)
 ```
 
+#### Table 7
+
 ```{r}
 #| echo: false
 #| output: true
-#| label: tbl_7
+#| label: tbl-7
 #| tbl-cap: "The least wealthiest regions in France"
 slice_min(gdpfr, gdp_per_capita, n=3)
 ```
@@ -1168,10 +1206,12 @@ gdppop %>%
    labs(title = 'GDP per capita in Hungary and Slovakia ', x = "Year", y = "GDP Per capita")
 ```
 
+#### Table 8
+
 ```{r }
 #| echo: false
 #| output: true
-#| label: tbl_8
+#| label: tbl-8
 #| tbl-cap: "The wealthiest regions un Hungary and Slovakia"
 gdphusk <- gdppop%>%
   filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
@@ -1179,6 +1219,8 @@ gdphusk <- gdppop%>%
   select(Year, Region, gdp_per_capita) 
 slice_max(gdphusk, gdp_per_capita, n=3)
 ```
+
+#### Table 9
 
 ```{r The poorest regions in Hungary and Slovakia}
 #| echo: false
@@ -1202,10 +1244,12 @@ gdppop%>%
    labs(title = 'GDP per capita in Portugal', x = "Year", y = "GDP Per capita") 
 ```
 
+#### Table 10
+
 ```{r}
 #| echo: false
 #| output: true
-#| label: tbl_10
+#| label: tbl-10
 #| tbl-cap: "The wealthiest regions in Portugal"
 gdppt <- gdppop%>%
   filter(grepl("PT...", Region)) %>%
@@ -1214,10 +1258,12 @@ gdppt <- gdppop%>%
 slice_max(gdppt, gdp_per_capita, n=3)
 ```
 
+#### Table 11
+
 ```{r}
 #| echo: false
 #| output: true
-#| label: tbl_11
+#| label: tbl-11
 #| tbl-cap: "The least wealtiest regions in Portugal"
 slice_min(gdppt, gdp_per_capita, n=3)
 ```
@@ -1236,10 +1282,12 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
    labs(title = 'Nuts 2 - Gini in Denmark', x = "Year", y = "Gini")
 ```
 
+#### Table 12
+
 ```{r}
 #| echo: false
 #| output: true
-#| label: tbl_12
+#| label: tbl-12
 #| tbl-cap: "Gini in DK regions"
 gdppop %>%
 filter(nuts0 == "DK") %>%
@@ -1247,6 +1295,8 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
+
+#### Table 13
 
 ```{r Outliers in Denmark}
 #| echo: false
@@ -1275,6 +1325,8 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
 
 ```
 
+#### Table 14
+
 ```{r}
 #| echo: false
 #| output: true
@@ -1286,6 +1338,8 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
+
+#### Table 15
 
 ```{r}
 #| echo: false
@@ -1314,6 +1368,8 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
 
 ```
 
+#### Table 16
+
 ```{r}
 #| echo: false
 #| output: true
@@ -1326,6 +1382,8 @@ distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
 
+#### Table 17
+
 ```{r}
 #| echo: false
 #| output: true
@@ -1337,6 +1395,8 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
+
+#### Table 18
 
 ```{r Outliers in Hungary and Slovakia}
 #| echo: false
@@ -1365,6 +1425,8 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
 
 ```
 
+#### Table 19
+
 ```{r}
 #| echo: false
 #| output: true
@@ -1376,6 +1438,8 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
+
+#### Table 20
 
 ```{r Outliers in Portugal}
 #| echo: false
@@ -1391,7 +1455,7 @@ ptoutliers
 
 **Assignment 2**
 
-#### Graph 10
+#### Figure 10
 
 ```{r}
 #| echo: false
@@ -1415,8 +1479,7 @@ ggplot()+
 #for alle land i 2010
 ```
 
-#### Graph 11
-
+#### Figure 11
 Estimate the effect of regional development on regional inequality GINI
 for the year 2010
 
